getting shit done, mostly on the segment maker

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -9,5 +9,10 @@ encoding//dissertation/materials/score_setup/__init__.py=utf-8
 encoding//dissertation/materials/score_setup/__metadata__.py=utf-8
 encoding//dissertation/materials/score_setup/definition.py=utf-8
 encoding//dissertation/segments/__init__.py=utf-8
+encoding//dissertation/segments/segment_01/__init__.py=utf-8
+encoding//dissertation/tools/ClarinetFingering.py=utf-8
+encoding//dissertation/tools/InstrumentEvent.py=utf-8
 encoding//dissertation/tools/ScoreTemplate.py=utf-8
+encoding//dissertation/tools/SegmentMaker.py=utf-8
+encoding//dissertation/tools/SegmentMakerBaseClass.py=utf-8
 encoding//dissertation/tools/__init__.py=utf-8
