--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -10,6 +10,7 @@ encoding//dissertation/materials/score_setup/__metadata__.py=utf-8
 encoding//dissertation/materials/score_setup/definition.py=utf-8
 encoding//dissertation/segments/__init__.py=utf-8
 encoding//dissertation/segments/segment_01/__init__.py=utf-8
+encoding//dissertation/test/illustrate_segments.py=utf-8
 encoding//dissertation/tools/ClarinetFingering.py=utf-8
 encoding//dissertation/tools/InstrumentEvent.py=utf-8
 encoding//dissertation/tools/ScoreTemplate.py=utf-8
