--- a/.travis.yml
+++ b/.travis.yml
@@ -12,13 +12,12 @@ before_install:
 install:
     - pip install --allow-external abjad --allow-unverified abjad -e git://github.com/Abjad/abjad.git#egg=abjad
     - pip install --allow-external ide --allow-unverified ide -e git://github.com/Abjad/ide.git#egg=ide
-    - pip install --allow-external baca --allow-unverified baca -e git://github.com/trevorbaca/baca.git#egg=baca
     - pip install -e .
 
 script:
-    - ajv doctest ./khamr -x
-    - py.test -rf ./khamr -x
-    - python ./khamr/test/illustrate_segments.py
+    - ajv doctest ./dissertation -x
+    - py.test -rf ./dissertation -x
+    - python ./dissertation/test/illustrate_segments.py
 
 notifications:
     email: false
