--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,66 @@
-abjad==2.21
+Abjad==2.21
 alabaster==0.7.10
+appnope==0.1.0
 Babel==2.5.1
+bleach==2.1.1
 certifi==2017.7.27.1
 chardet==3.0.4
+cycler==0.10.0
+decorator==4.1.2
 docutils==0.14
+entrypoints==0.2.3
+html5lib==1.0b10
 idna==2.6
 imagesize==0.7.1
+ipykernel==4.6.1
+ipython==6.2.1
+ipython-genutils==0.2.0
+ipywidgets==7.0.3
+iresolve==0.1.3
+jedi==0.11.0
 Jinja2==2.9.6
+jsonschema==2.6.0
+jupyter==1.0.0
+jupyter-client==5.1.0
+jupyter-console==5.2.0
+jupyter-core==4.4.0
 MarkupSafe==1.0
+matplotlib==2.1.0
+mistune==0.8
+nbconvert==5.3.1
+nbformat==4.4.0
+notebook==5.2.1
+numpy==1.13.3
+pandocfilters==1.4.2
+parso==0.1.0
+pexpect==4.2.1
+pickleshare==0.7.4
 ply==3.10
+prompt-toolkit==1.0.15
+ptyprocess==0.5.2
 py==1.4.34
+pyflakes==1.6.0
 Pygments==2.2.0
+pyparsing==2.2.0
 PyPDF2==1.26.0
 pytest==3.2.3
+python-dateutil==2.6.1
 pytz==2017.2
+pyzmq==16.0.3
+qtconsole==4.3.1
 requests==2.18.4
 RhyPy==0.1
+simplegeneric==0.8.1
 six==1.11.0
 snowballstemmer==1.2.1
 Sphinx==1.6.4
 sphinx-rtd-theme==0.2.4
 sphinxcontrib-websupport==1.0.1
+terminado==0.6
+testpath==0.3.1
+tornado==4.5.2
+traitlets==4.3.2
 urllib3==1.22
+wcwidth==0.1.7
+webencodings==0.5.1
+widgetsnbextension==3.0.6
