--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Babel==2.5.1
 bleach==2.1.1
 certifi==2017.7.27.1
 chardet==3.0.4
+coverage==4.5.1
 cycler==0.10.0
 decorator==4.1.2
 docutils==0.14
@@ -27,12 +28,15 @@ jupyter-core==4.4.0
 MarkupSafe==1.0
 matplotlib==2.1.0
 mistune==0.8
+mock==2.0.0
 nbconvert==5.3.1
 nbformat==4.4.0
+nose==1.3.7
 notebook==5.2.1
 numpy==1.13.3
 pandocfilters==1.4.2
 parso==0.1.0
+pbr==4.1.0
 pexpect==4.2.1
 pickleshare==0.7.4
 ply==3.10
