--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,11 @@
 [metadata]
 description-file = README.md
+[nosetests]
+detailed-errors=1
+with-coverage=1
+cover-package=surge
+cover-erase=1
+verbosity=1
+exclude-dir=surge/build
+            surge/materials
+            surge/segments
