--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 Abjad==2.21
 alabaster==0.7.10
 appnope==0.1.0
+argh==0.26.2
+autopep8==1.3.5
 Babel==2.5.1
 bleach==2.1.1
 certifi==2017.7.27.1
@@ -10,6 +12,7 @@ cycler==0.10.0
 decorator==4.1.2
 docutils==0.14
 entrypoints==0.2.3
+future==0.16.0
 html5lib==1.0b10
 idna==2.6
 imagesize==0.7.1
@@ -27,33 +30,45 @@ jupyter-console==5.2.0
 jupyter-core==4.4.0
 MarkupSafe==1.0
 matplotlib==2.1.0
+mccabe==0.6.1
 mistune==0.8
 mock==2.0.0
 nbconvert==5.3.1
 nbformat==4.4.0
 nose==1.3.7
+nose-exclude==0.5.0
+nose-watch==0.9.2
 notebook==5.2.1
 numpy==1.13.3
 pandocfilters==1.4.2
 parso==0.1.0
+pathtools==0.1.2
 pbr==4.1.0
 pexpect==4.2.1
 pickleshare==0.7.4
+pluggy==0.6.0
 ply==3.10
+prometheus-client==0.3.1
 prompt-toolkit==1.0.15
 ptyprocess==0.5.2
 py==1.4.34
+pycodestyle==2.4.0
+pydocstyle==2.1.1
 pyflakes==1.6.0
 Pygments==2.2.0
 pyparsing==2.2.0
 PyPDF2==1.26.0
 pytest==3.2.3
 python-dateutil==2.6.1
+python-language-server==0.19.0
 pytz==2017.2
+PyYAML==3.13
 pyzmq==16.0.3
 qtconsole==4.3.1
 requests==2.18.4
 RhyPy==0.1
+rope==0.10.7
+Send2Trash==1.5.0
 simplegeneric==0.8.1
 six==1.11.0
 snowballstemmer==1.2.1
@@ -65,6 +80,8 @@ testpath==0.3.1
 tornado==4.5.2
 traitlets==4.3.2
 urllib3==1.22
+watchdog==0.8.3
 wcwidth==0.1.7
 webencodings==0.5.1
 widgetsnbextension==3.0.6
+yapf==0.22.0
